vlib/v/checker/tests/assign_expr_type_err_f.out
vlib/v/checker/tests/assign_expr_type_err_f.v:3:9: error: operator -= not defined on right operand type `bool`
    1 | fn main() {
    2 |     mut foo := 10
    3 |     foo -= false
      |            ~~~~~
    4 | }
